--- a/express-delivery-angular/express-delivery-web/src/index.html
+++ b/express-delivery-angular/express-delivery-web/src/index.html
@@ -43,6 +43,6 @@
           <script src="./assets/js/jquery.ajaxchimp.min.js"></script>
           <script src="./assets/js/plugins.js"></script>
           <script src="./assets/js/main.js"></script>
-          <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAcARHUk4o65m_Oy_2_5yiUksDSQ2mtqmc&libraries=visualization,places"></script>          
+          <script src="https://maps.googleapis.com/maps/api/js?key=${KEY}&libraries=visualization,places"></script>          
 </body>
 </html>
